@startuml
skinparam classAttributeIconSize 0

' ======= CLASSES PRINCIPAIS =======
class Militar {
  +saram: String
  +nomeCompleto: String
  +posto: String
  +dataAdmissao: String
  +cpf: String
  +sexo: String
  +dataNascimento: String
  +naturalidade: String
  +quadro: String
  +unidade: String
  +situacaoAtual: String
}

class Missao {
  +id: String
  +tipo: String
  +local: String
  +dataInicio: String
  +dataTermino: String
  +status: String
  +descricao: String
}

class MilitarMissaoDAO {
  +vincular(militarId, missaoId)
  +buscarMissoesPorMilitar(militarId)
}

class MilitarDAO {
  +getAll()
  +remover(saram)
}

class MissaoDAO {
  +getAll()
  +remover(id)
}

' ======= CONTROLLERS =======
class MilitaresController {
  +initialize()
  +carregarDados()
  +filtrar()
  +limparFiltro()
  +adicionar()
  +editar()
  +remover()
  +carregarMissoes()
  +adicionarMissao()
  +editarMissao()
  +removerMissao()
  +vincularMissaoExistente()
}

class VincularMissaoController {
  +initialize()
  +setMilitarSaram(saram)
  +vincular()
  +adicionarTodos()
  +removerTodos()
  +excluirMissaoDoBanco()
}

' ======= RELACIONAMENTOS =======
Militar "1" -- "0..*" MilitarMissaoDAO : vincula
Missao "1" -- "0..*" MilitarMissaoDAO : vincula

MilitaresController --> MilitarDAO
MilitaresController --> MissaoDAO
MilitaresController --> MilitarMissaoDAO
MilitaresController --> VincularMissaoController

VincularMissaoController --> MissaoDAO
VincularMissaoController --> MilitarMissaoDAO
VincularMissaoController --> MilitaresController

Militar --> Missao : vinculo N:N (via tabela Militar_Missoes)

@enduml
